# kagi_mcp_local

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/kagimcplocal/: server.py  test.py
